--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -88,6 +88,9 @@ nav.navbar {
             max-width: 100%;
         }
     }
+    .sm-100 {
+        width: 100%;
+    }
 }
 .understrap-read-more-link {
     opacity: 0.7;
