--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -71,6 +71,12 @@ nav.navbar {
 .post-single {
 }
 
+.site-footer {
+    .col-sm-6 {
+        padding-right: 0;
+    }
+}
+
 .post-in-list {
     .understrap-read-more-link {
         float: right;
