--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,15 +24,15 @@ nav.navbar {
 
 
 #wrapper-footer {
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0; 
     width: 100%;
     background-color: rgb(243, 243, 243);
     -webkit-box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.2);
     box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.2);
     padding: 10px 0 0 0;
-    z-index: 10;
+    // z-index: 10;
     address {
         margin: 0;
     }
@@ -42,6 +42,8 @@ nav.navbar {
         opacity: 0.85;
     }
 }
+
+
 
 
 
@@ -69,6 +71,10 @@ nav.navbar {
     }
 }
 .post-single {
+}
+
+.type-page {
+    min-height: 50vh;
 }
 
 .site-footer {
